--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
            this is rameez adil.
         </span>
         <br>
-        <a href=""><img src="https://i.imgur.com/fgHScLx.jpeg" width="560px"></a>
+        <a href="./images01.html"><img src="https://i.imgur.com/fgHScLx.jpeg" width="560px"></a>
         <br>
         <span class="image-text">I took this image, pretty proud of it.</span>
         <br>
